updated getNextLesson
