# docs/swagger.yaml
@@ -194,11 +194,6 @@ definitions:
       error:
         type: string
     type: object
-  response.LessonBodyResponse:
-    properties:
-      lesson_body:
-        $ref: '#/definitions/dto.LessonDtoBody'
-    type: object
   response.LessonResponse:
     properties:
       lesson:
@@ -332,7 +327,7 @@ paths:
         "200":
           description: next lesson content
           schema:
-            $ref: '#/definitions/response.LessonBodyResponse'
+            $ref: '#/definitions/response.LessonResponse'
         "400":
           description: invalid course or lesson ID
           schema:
